--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,9 +36,10 @@ android {
     compileSdkVersion 29
 
     // backwards compatible for old gradle versions without namespace
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.xraph.plugin.flutter_unity_widget'
-    }
+    // if (project.android.hasProperty("namespace")) {
+    //     namespace 'com.xraph.plugin.flutter_unity_widget'
+    // }
+     namespace 'com.xraph.plugin.flutter_unity_widget'
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
